[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Computer.png" type="Texture" id=1]
[ext_resource path="res://Assets/price.png" type="Texture" id=2]
[ext_resource path="res://FirstTaskPrice.gd" type="Script" id=3]
[ext_resource path="res://Assets/KGBehindTheseHazelEyes.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://MenuComputer.gd" type="Script" id=5]
[ext_resource path="res://Assets/clipart4679363.png" type="Texture" id=6]
[ext_resource path="res://Assets/pngwing.com.png" type="Texture" id=7]
[ext_resource path="res://InspCounterComp.gd" type="Script" id=8]
[ext_resource path="res://ComputerScene.gd" type="Script" id=9]
[ext_resource path="res://Assets/KEY0.CC-Small-Green-Tick.png" type="Texture" id=10]
[ext_resource path="res://SecondTaskPrice.gd" type="Script" id=11]
[ext_resource path="res://Assets/KEY0.CC-American-Cockroach-Insect-Drawing-German-Cockroach-Cockroach-Png-Transparent-Background.png" type="Texture" id=12]
[ext_resource path="res://ThirdTaskPrice.gd" type="Script" id=13]
[ext_resource path="res://ForthTaskPrice.gd" type="Script" id=14]
[ext_resource path="res://FifthTaskPrice.gd" type="Script" id=15]
[ext_resource path="res://FinalTask.gd" type="Script" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 179, 129 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 14.75 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="CircleShape2D" id=4]
radius = 124.145

[node name="Node" type="Node"]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 767, 431.75 )
scale = Vector2( 1.1363, 1.2732 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="FirstTaskPrice" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="FirstTaskPrice"]
position = Vector2( 348, 215.625 )
scale = Vector2( 0.491892, 0.734507 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstTaskPrice"]
position = Vector2( 347, 214 )
shape = SubResource( 1 )

[node name="Menu" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Menu"]
position = Vector2( 57.375, 46.3437 )
scale = Vector2( 0.192949, 0.142918 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu"]
position = Vector2( 58, 47.5 )
scale = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="InspCounter" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InspCounter"]
margin_left = 1365.0
margin_top = 10.0
margin_right = 1447.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.964706, 0.921569, 0.921569, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="InspCounter"]
position = Vector2( 1476.12, 36.8047 )
scale = Vector2( 0.10358, 0.100847 )
texture = ExtResource( 7 )

[node name="FirstTick" type="Sprite" parent="."]
position = Vector2( 352, 213 )
scale = Vector2( 0.47807, 0.457071 )
texture = ExtResource( 10 )

[node name="SecondTaskPrice" type="Area2D" parent="."]
script = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="SecondTaskPrice"]
position = Vector2( 757, 213 )
scale = Vector2( 0.491892, 0.734507 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecondTaskPrice"]
position = Vector2( 758, 214 )
shape = SubResource( 1 )

[node name="SecondTick" type="Sprite" parent="."]
position = Vector2( 755, 209 )
scale = Vector2( 0.47807, 0.457071 )
texture = ExtResource( 10 )

[node name="Bugg" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Bugg"]
position = Vector2( 1534, 866 )
scale = Vector2( 0.0829847, 0.0724886 )
texture = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bugg"]
polygon = PoolVector2Array( 1490, 826, 1495, 841, 1512, 848, 1485, 867, 1510, 866, 1522, 858, 1524, 878, 1553, 906, 1583, 885, 1562, 858, 1539, 847, 1516, 834 )

[node name="Bugg2" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Bugg2"]
position = Vector2( 1537, 74.0001 )
rotation = -0.87226
scale = Vector2( 0.0802358, 0.0682078 )
texture = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bugg2"]
rotation = 2.45967
polygon = PoolVector2Array( -1113.63, -1009.73, -1094.18, -1000.37, -1129.49, -998.127, -1144.43, -1005.11, -1174.8, -1016.88, -1194.07, -1031.23, -1173.41, -1058.26, -1148.82, -1047.31, -1135.76, -1038, -1133.67, -1024.71, -1101.86, -1040.1, -1100.84, -1030.25, -1123.92, -1012.92 )

[node name="ThirdTaskPrice" type="Area2D" parent="."]
script = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="ThirdTaskPrice"]
position = Vector2( 1165, 215 )
scale = Vector2( 0.491892, 0.734507 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThirdTaskPrice"]
position = Vector2( 1164, 217 )
shape = SubResource( 1 )

[node name="ThirdTick" type="Sprite" parent="."]
position = Vector2( 1163, 217 )
scale = Vector2( 0.47807, 0.457071 )
texture = ExtResource( 10 )

[node name="ForthTaskPrice" type="Area2D" parent="."]
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="ForthTaskPrice"]
position = Vector2( 349, 555 )
scale = Vector2( 0.491892, 0.734507 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ForthTaskPrice"]
position = Vector2( 348, 557 )
shape = SubResource( 1 )

[node name="ForthTick" type="Sprite" parent="."]
position = Vector2( 348, 557 )
scale = Vector2( 0.47807, 0.457071 )
texture = ExtResource( 10 )

[node name="FifthTaskPrice" type="Area2D" parent="."]
script = ExtResource( 15 )

[node name="Sprite" type="Sprite" parent="FifthTaskPrice"]
position = Vector2( 756, 557 )
scale = Vector2( 0.491892, 0.734507 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FifthTaskPrice"]
position = Vector2( 755, 556 )
shape = SubResource( 1 )

[node name="FifthTick" type="Sprite" parent="."]
position = Vector2( 762, 554 )
scale = Vector2( 0.47807, 0.457071 )
texture = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1092.0
margin_top = 451.0
margin_right = 1412.0
margin_bottom = 775.0
color = Color( 0.32549, 0.0196078, 0.0196078, 0.862745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalTask" type="Area2D" parent="."]
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinalTask"]
position = Vector2( 1246, 611 )
shape = SubResource( 4 )

[connection signal="input_event" from="FirstTaskPrice" to="FirstTaskPrice" method="_on_FirstTaskPrice_input_event"]
[connection signal="input_event" from="FirstTaskPrice" to="InspCounter" method="_on_FirstTaskPrice_input_event"]
[connection signal="input_event" from="Menu" to="Menu" method="_on_Menu_input_event"]
[connection signal="input_event" from="SecondTaskPrice" to="InspCounter" method="_on_SecondTaskPrice_input_event"]
[connection signal="input_event" from="SecondTaskPrice" to="SecondTaskPrice" method="_on_SecondTaskPrice_input_event"]
[connection signal="input_event" from="Bugg" to="." method="_on_Bugg_input_event"]
[connection signal="input_event" from="Bugg2" to="." method="_on_Bugg2_input_event"]
[connection signal="input_event" from="ThirdTaskPrice" to="InspCounter" method="_on_ThirdTaskPrice_input_event"]
[connection signal="input_event" from="ThirdTaskPrice" to="ThirdTaskPrice" method="_on_ThirdTaskPrice_input_event"]
[connection signal="input_event" from="ForthTaskPrice" to="InspCounter" method="_on_ForthTaskPrice_input_event"]
[connection signal="input_event" from="ForthTaskPrice" to="ForthTaskPrice" method="_on_ForthTaskPrice_input_event"]
[connection signal="input_event" from="FifthTaskPrice" to="InspCounter" method="_on_FifthTaskPrice_input_event"]
[connection signal="input_event" from="FifthTaskPrice" to="FifthTaskPrice" method="_on_FifthTaskPrice_input_event"]
[connection signal="input_event" from="FinalTask" to="FinalTask" method="_on_FinalTask_input_event"]
